changed url's for final production version

--- a/src/index.html
+++ b/src/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>CSCI313Project</title>
-  <base href="/">
+  <title>The Saucy Hedgehog</title>
+  <base href="http://students.cs.ndsu.nodak.edu/~erick.bickler/angular/saucy_hedgehog/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="assets/images/saucy_hedgehog.ico">
 </head>
