--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>The Saucy Hedgehog</title>
-  <base href="http://students.cs.ndsu.nodak.edu/~erick.bickler/angular/saucy_hedgehog/">
+  <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="assets/images/saucy_hedgehog.ico">
 </head>
